# cc-history

./: .gitignore  AGENTS.md  LICENSE  README.md  create_shortcut.bat  pyproject.toml  pytest.ini  requirements.txt
installer/: cc-history.iss
packaging/: cc-history.spec
scripts/: build_windows.ps1
src/cc_history/: __init__.py  __main__.py  app.py  data.py
src/cc_history/static/: icons.js  styles.css  utils.js
src/cc_history/templates/: index.html
tests/: test_app.py  test_data.py
