[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-history"
version = "1.0.0"
description = "Claude Code 历史对话查看器 — 本地桌面应用，浏览和搜索 Claude Code 的历史会话。"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "zyz" },
]
keywords = ["claude", "claude-code", "history", "viewer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "flask>=3.0",
    "pywebview>=5.0",
]

[project.scripts]
cc-history = "cc_history.app:main"

[project.gui-scripts]
cc-historyw = "cc_history.app:main_noconsole"

[project.urls]
Homepage = "https://github.com/zzzmike123/cc-history"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cc_history = ["templates/*.html"]

